--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    uuid: 3.0.6
-
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.9
+  firebase_dynamic_links: ^4.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
